--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"dependencies":{
 		"express":"3.x",
 		"redis":"~0.10.0",
-		"mime":"~1.2.11"
+		"mime":"~1.2.11",
+		"expect.js":"~0.2.0",
+		"ejs":"~0.8.5"
 	}
 }
