--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"redis":"~0.10.0",
 		"mime":"~1.2.11",
 		"expect.js":"~0.2.0",
-		"ejs":"~0.8.5"
+		"ejs":"~0.8.5",
+		"superagent":"~0.16.0"
 	}
 }
